--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
         id: cache_timestamp
         run: echo "timestamp=$(date +%s)" >> "$GITHUB_OUTPUT"
       - name: Cache BinaryBuilder Storage Directory
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' && !${{ github.event.inputs.LLVM_VERSION }}
         uses: actions/cache@v4
         with:
           path: ${{ github.workspace }}/binarybuilder_storage
@@ -80,7 +80,7 @@ jobs:
           restore-keys: |
                ${{ matrix.target }}
       - name: Restore Cached BinaryBuilder Storage Directory
-        if: github.ref != 'refs/heads/master'
+        if: github.ref != 'refs/heads/master' || ${{ github.event.inputs.LLVM_VERSION }}
         uses: actions/cache/restore@v4
         with:
           path: ${{ github.workspace }}/binarybuilder_storage
