--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -1,47 +1,29 @@
-name: Build LLVM assert
+name: Build LLVM assert Template
 on:
-  pull_request:
-  push:
-  workflow_dispatch:
+  workflow_call:
     inputs:
-      LLVM_VERSION:
-        description: 'LLVM sha to build'
-        required: false
+      target:
         type: string
-  schedule:
-    - cron: '0 */8 * * *'
+        required: true
+      LLVM_VERSION:
+        type: string
+        required: true
+      LLVM_VERSION_MAJOR:
+        type: string
+        required: true
+      save_cache:
+        type: boolean
+        required: true
 
 jobs:
-  fetch_llvm_version:
-    runs-on: ubuntu-latest
-    outputs:
-      LLVM_VERSION: ${{ steps.fetch.outputs.LLVM_VERSION }}
-      LLVM_VERSION_MAJOR: ${{ steps.fetch.outputs.LLVM_VERSION_MAJOR }}
-    steps:
-      - name: "Fetch"
-        id: fetch
-        run: |
-          set -o xtrace
-          LLVM_VERSION=$(git ls-remote https://github.com/llvm/llvm-project.git | grep 'refs/heads/main$' | awk '{print $1}')
-          LLVM_VERSION_MAJOR=$(curl -s https://raw.githubusercontent.com/llvm/llvm-project/$LLVM_VERSION/cmake/Modules/LLVMVersion.cmake | grep 'set(LLVM_VERSION_MAJOR' | awk '{print $2}' | tr -d ')')
-          echo "LLVM_VERSION=$LLVM_VERSION" >> "$GITHUB_OUTPUT"
-          echo "LLVM_VERSION_MAJOR=$LLVM_VERSION_MAJOR" >> "$GITHUB_OUTPUT"
   build_llvm_assert:
-    needs: fetch_llvm_version
     runs-on: ubuntu-latest
     env:
         BINARYBUILDER_USE_CCACHE: true
         BINARYBUILDER_AUTOMATIC_APPLE: true
         BINARYBUILDER_STORAGE_DIR: ${{ github.workspace }}/binarybuilder_storage
-        LLVM_VERSION: ${{ github.event.inputs.LLVM_VERSION || needs.fetch_llvm_version.outputs.LLVM_VERSION }}
-        LLVM_VERSION_MAJOR: ${{ needs.fetch_llvm_version.outputs.LLVM_VERSION_MAJOR }}
-    strategy:
-      fail-fast: false
-      matrix:
-        target:
-          - x86_64-w64-mingw32-cxx11
-          - aarch64-apple-darwin
-          - i686-w64-mingw32-cxx11
+        LLVM_VERSION: ${{ inputs.LLVM_VERSION }}
+        LLVM_VERSION_MAJOR: ${{ inputs.LLVM_VERSION_MAJOR }}
     steps:
       - name: Maximize build disk space (Only remove unwanted software)
           # You may pin to the exact commit or the version.
@@ -68,26 +50,21 @@ jobs:
         with:
           version: '1.7'
           arch: x64
-      - name: Prepare cache timestamp
-        id: cache_timestamp
-        run: echo "timestamp=$(date +%s)" >> "$GITHUB_OUTPUT"
       - name: Cache BinaryBuilder Storage Directory
-        if: github.ref == 'refs/heads/master' && github.event.inputs.LLVM_VERSION == ''
+        if: inputs.save_cache
         uses: actions/cache@v4
         with:
           path: ${{ github.workspace }}/binarybuilder_storage
-          key: ${{ matrix.target }}-${{ steps.cache_timestamp.outputs.timestamp }}
-          restore-keys: |
-               ${{ matrix.target }}
+          key: ${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
+          restore-keys: ${{ inputs.target }}
       - name: Restore Cached BinaryBuilder Storage Directory
-        if: github.ref != 'refs/heads/master' || github.event.inputs.LLVM_VERSION != ''
+        if: ${{ !inputs.save_cache }}
         uses: actions/cache/restore@v4
         with:
           path: ${{ github.workspace }}/binarybuilder_storage
-          key: ${{ matrix.target }}-${{ steps.cache_timestamp.outputs.timestamp }}
-          restore-keys: |
-               ${{ matrix.target }}
-      - name: Build LLVM assert on ${{ matrix.target }}
+          key: ${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
+          restore-keys: ${{ inputs.target }}
+      - name: Build LLVM assert on ${{ inputs.target }}
         id: build
         run: |
           set -o xtrace
@@ -209,19 +186,20 @@ jobs:
 
             include("../common.jl")
 
-            build_tarballs(["--verbose", "${{ matrix.target }}", "--skip-audit"], configure_build([], version; update_sdk=false, assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
+            build_tarballs(["--verbose", "${{ inputs.target }}", "--skip-audit"], configure_build([], version; update_sdk=false, assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"18", julia_compat="1.6")
           '
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: llvm-assert-${{ matrix.target }}-${{ needs.fetch_llvm_version.outputs.LLVM_VERSION }}
+          name: llvm-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
           path: ${{ github.workspace }}/Yggdrasil/L/LLVM/LLVM_full@19/products
           if-no-files-found: warn
   build_julia_assert:
+    if: inputs.target == 'x86_64-w64-mingw32-cxx11'
     runs-on: windows-latest
-    needs: [fetch_llvm_version, build_llvm_assert]
+    needs: build_llvm_assert
     env:
-      LLVM_VERSION_MAJOR: ${{ needs.fetch_llvm_version.outputs.LLVM_VERSION_MAJOR }}
+      LLVM_VERSION_MAJOR: ${{ inputs.LLVM_VERSION_MAJOR }}
     defaults:
       run:
         shell: msys2 {0}
