Fix env var substitution

--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -234,5 +234,5 @@ jobs:
           git fetch
           git switch llvm-19
           mkdir -p deps/srccache
-          mv ../LLVM_full_assert.v$(LLVM_VERSION_MAJOR).0.0.x86_64-w64-mingw32-cxx11.tar.gz deps/srccache/libLLVM.v18.1.7+2.x86_64-w64-mingw32-cxx11.tar.gz
-          make -j4 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=$(LLVM_VERSION_MAJOR)jl
+          mv ../LLVM_full_assert.v$LLVM_VERSION_MAJOR.0.0.x86_64-w64-mingw32-cxx11.tar.gz deps/srccache/libLLVM.v18.1.7+2.x86_64-w64-mingw32-cxx11.tar.gz
+          make -j4 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl
