--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -223,7 +223,7 @@ jobs:
       - name: Download a single artifact
         uses: actions/download-artifact@v4
         with:
-          pattern: "x86_64-w64-mingw32-cxx11"
+          pattern: llvm-assert-${{ inputs.target }}
       - name: "Build Julia Assert"
         run: |
           set -o xtrace
@@ -234,5 +234,5 @@ jobs:
           git fetch
           git switch llvm-19
           mkdir -p deps/srccache
-          mv ../LLVM_full_assert.v$LLVM_VERSION_MAJOR.0.0.x86_64-w64-mingw32-cxx11.tar.gz deps/srccache/libLLVM.v18.1.7+2.x86_64-w64-mingw32-cxx11.tar.gz
+          mv ../LLVM_full_assert.v${LLVM_VERSION_MAJOR}.0.0.${{ inputs.target }}.tar.gz deps/srccache/libLLVM.v18.1.7+2.${{ inputs.target }}.tar.gz
           make -j4 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl
