Fix extracting tarballs with symlinks to as of yet un-extracted files

--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -242,6 +242,7 @@ jobs:
       - name: "Build Julia Assert"
         run: |
           set -o xtrace
+          export MSYS=winsymlinks:sysfile
           git config --global core.eol lf
           git config --global core.autocrlf input
           git clone https://github.com/Zentrik/julia
