--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,6 +8,10 @@ on:
         description: 'LLVM sha to build'
         required: false
         type: string
+      save_cache:
+        required: true
+        type: boolean
+        default: false
   schedule:
     - cron: '0 */8 * * *'
 
@@ -44,4 +48,4 @@ jobs:
       target: ${{ matrix.target }}
       LLVM_VERSION: ${{ needs.fetch_llvm_version.outputs.LLVM_VERSION }}
       LLVM_VERSION_MAJOR: ${{ needs.fetch_llvm_version.outputs.LLVM_VERSION_MAJOR }}
-      save_cache: ${{ github.ref == 'refs/heads/master' && github.event.inputs.LLVM_VERSION == '' }}
+      save_cache: ${{ (github.ref == 'refs/heads/master' && github.event.inputs.LLVM_VERSION == '') || github.event.inputs.save_cache }}
