--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,10 +8,10 @@ on:
         description: 'LLVM sha to build'
         required: false
         type: string
-      save_cache:
-        required: true
-        type: boolean
-        default: false
+      # save_cache:
+      #   required: true
+      #   type: boolean
+      #   default: false
   schedule:
     - cron: '0 */8 * * *'
 
@@ -22,7 +22,7 @@ jobs:
       LLVM_VERSION: ${{ steps.fetch.outputs.LLVM_VERSION }}
       LLVM_VERSION_MAJOR: ${{ steps.fetch.outputs.LLVM_VERSION_MAJOR }}
     env:
-      LLVM_VERSION: '23a26e7120df474f37f7369e8e06fd90f21a58b5' # ${{ github.event.inputs.LLVM_VERSION }}
+      LLVM_VERSION: ${{ github.event.inputs.LLVM_VERSION }}
     steps:
       - name: "Fetch"
         id: fetch
