--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -193,7 +193,7 @@ jobs:
           julia -e '
             import Pkg
             Pkg.add("BinaryBuilder")
-            Pkg.add(PackageSpec("BinaryBuilderBase", version=v1.30.1))
+            Pkg.add(PackageSpec("BinaryBuilderBase", version=v"1.30.1"))
             Pkg.add("Pkg")
             Pkg.add("LibGit2")
 
