--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -191,11 +191,11 @@ jobs:
           ' > bundled/patches/remove_mlir_shlib.patch
           mkdir -p ${{ github.workspace }}/binarybuilder_storage
           julia -e '
-            import Pkg
             Pkg.add("BinaryBuilder")
-            Pkg.add(PackageSpec("BinaryBuilderBase", version=v"1.30.1"))
             Pkg.add("Pkg")
             Pkg.add("LibGit2")
+            using Pkg
+            Pkg.add(PackageSpec("BinaryBuilderBase", version=v"1.30.1"))  
 
             version = VersionNumber(parse(Int, ENV["LLVM_VERSION_MAJOR"]), 0, 0)
 
