--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -194,7 +194,7 @@ jobs:
             using Pkg  
             Pkg.add("BinaryBuilder")
             Pkg.add("LibGit2")
-            Pkg.add(PackageSpec("BinaryBuilderBase", version=v"1.30.1"))  
+            Pkg.add(PackageSpec(name="BinaryBuilderBase", version=v"1.30.1"))  
 
             version = VersionNumber(parse(Int, ENV["LLVM_VERSION_MAJOR"]), 0, 0)
 
