--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -118,6 +118,10 @@ jobs:
       run:
         shell: msys2 {0}
     steps:
+      - run: |
+          set -o xtrace
+          git config --global core.eol lf
+          git config --global core.autocrlf input
       - uses: actions/checkout@v4
       - uses: msys2/setup-msys2@v2
         with:
@@ -143,8 +147,6 @@ jobs:
         run: |
           set -o xtrace
           export MSYS=winsymlinks:sysfile
-          git config --global core.eol lf
-          git config --global core.autocrlf input
           git clone https://github.com/Zentrik/julia
           cd julia
           git fetch
