Apply julia patches only if LLVM includes the change
Makes bisecting easier

--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -18,6 +18,8 @@ on:
 jobs:
   build_llvm_assert:
     runs-on: ubuntu-latest
+    outputs:
+      JULIA_PATCHES_TO_APPLY: ${{ steps.julia_patches.outputs.JULIA_PATCHES_TO_APPLY }}
     env:
         BINARYBUILDER_USE_CCACHE: true
         BINARYBUILDER_AUTOMATIC_APPLE: true
@@ -102,6 +104,21 @@ jobs:
 
             build_tarballs(["--verbose", "${{ inputs.target }}", "--skip-audit"], configure_build([], version; update_sdk=false, assert=true, experimental_platforms=true, git_ver=ENV["LLVM_VERSION"])...; preferred_gcc_version=v"10", preferred_llvm_version=v"16", julia_compat="1.6")
           '
+        - name: Work out which julia patches to apply
+          id: julia_patches
+          run: |
+            set -o xtrace
+            cd binarybuilder_storage/downloads/clones/llvm-project.git-1df819a03ecf6890e3787b27bfd4f160aeeeeacd50a98d003be8b0893f11a9be # https://github.com/JuliaPackaging/BinaryBuilderBase.jl/blob/b77c32e367f6db32517967d2b3c41f2c9850806b/src/Sources.jl#L209
+
+            JULIA_PATCHES_TO_APPLY=()
+            for patch in $GITHUB_WORKSPACE/julia-patches/*; do
+              patch=$(basename "$patch")
+              if git merge-base --is-ancestor "$patch" "$LLVM_VERSION"; then
+                JULIA_PATCHES_TO_APPLY+=( "$patch" )
+              fi
+            done
+
+            echo "JULIA_PATCHES_TO_APPLY=${JULIA_PATCHES_TO_APPLY[*]}" >> "$GITHUB_OUTPUT"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -148,8 +165,11 @@ jobs:
           cd julia
           git fetch
           git switch llvm-19
-          git apply $GITHUB_WORKSPACE/julia-patches/adapt_to_102993.patch
-          git apply $GITHUB_WORKSPACE/julia-patches/adapt_to_100310.patch
+
+          for patch in ${{ needs.build_llvm_assert.outputs.JULIA_PATCHES_TO_APPLY }}; do
+            git apply $GITHUB_WORKSPACE/julia-patches/$patch -v
+          done
+
           mkdir -p deps/srccache
           mv ../LLVM_full_assert.v${LLVM_VERSION_MAJOR}.0.0.${{ inputs.target }}.tar.gz deps/srccache/libLLVM.v18.1.7+2.${{ inputs.target }}.tar.gz
           make -j4 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl
